<resources>
    <string name="app_name">My App</string>
    <string name="welcome_message">Welcome</string>
    <string name="nameBtnAdd">Add</string>
    <string name="nameBtnUpd">Update</string>
    <string name="nameBtnReport">Report</string>
    <string name="nameBtnExport">Export to JSON</string>
    <string name="nameBtnImport">Import from JSON</string>
    <string name="nameBtnDel">Delete</string>
</resources>